--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,10 @@ body {
 	float: left;
 	box-sizing: border-box;
 }
-
+.img-cover {
+	color:black;
+	opacity:0.2;
+}
 /* For devices larger than 400px */
 @media (min-width: 400px) {
 .container {
