--- a/css/styles.css
+++ b/css/styles.css
@@ -786,7 +786,18 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 	max-width: 100%;
 	height: auto;
 }
-@media(max-width: 500px){
+@media (min-width: 320px) and (max-width: 412px){
+	.modal-content {
+		margin: 3%;
+		width: 50%;
+		max-width: 300px;
+	}
+	.modal-content img {
+		max-width: 250px;
+	}
+}
+
+@media(min-width: 413px) and (max-width: 500px){
 .modal-content {
 	margin: 7%;
 	width: 50%;
